# nix-notes

./: .gitignore  README.md  build-image.sh  configuration.nix  create-droplet.sh  default.nix  deploy.sh  docker.nix  gitolite.nix  import-image.sh  runvm.sh  upload-image.sh  vhost.nix  vm-nogui.nix
app/: LICENSE  app.cabal  app.hs  default.nix  derivation.nix  shell.nix
modules/: app.nix  base.nix  cron.nix  nginx.nix  ssmtp.nix  vhost.nix  vm-nogui.nix
site/: app.md  credentials.md  cron.md  default.nix  deploying.md  docker.md  image.md  index.html  index.md  letsencrypt.md  metadata.yml  runvm.md  site.md  ssmtp.md  toplevel.md
site/intro/: example-0.md  example-0.nix  example-1.nix  expressions.md  index.md  more-expressions.md
